# fffw

./: .gitignore  CMakeLists.txt  README.md  common.cmake  fffw_crosscompile.cmake  macros.cmake
firmware/: CMakeLists.txt  main.c
fractallib/: CMakeLists.txt  axefx.c  axefx.h
lcdlib/: CMakeLists.txt
src/: axe_default_cc.h  axe_defs.h  axe_state.c  axe_state.h  common_defs.h  main.c  settings.h
tblib/: CMakeLists.txt  button.c  button.h  expression.c  midi.c  pedal_led.h  pinout.h
