CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

INCLUDE(fffw_crosscompile.cmake)

PROJECT(fffw)

SET(FFFW_BASE_DIRECTORY ${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${FFFW_BASE_DIRECTORY})

INCLUDE_DIRECTORIES(${FFFW_BASE_DIRECTORY}/tblib)
ADD_SUBDIRECTORY(${FFFW_BASE_DIRECTORY}/tblib)

INCLUDE_DIRECTORIES(${FFFW_BASE_DIRECTORY}/lcdlib)
ADD_SUBDIRECTORY(${FFFW_BASE_DIRECTORY}/lcdlib)

INCLUDE_DIRECTORIES(${FFFW_BASE_DIRECTORY}/fractallib)
ADD_SUBDIRECTORY(${FFFW_BASE_DIRECTORY}/fractallib)

ADD_SUBDIRECTORY(${FFFW_BASE_DIRECTORY}/firmware)
