CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

INCLUDE(${FFFW_BASE_DIRECTORY}/fffw_crosscompile.cmake)

PROJECT(firmware)

MESSAGE(STATUS "\nCreating firmware project...")

SET(MAIN_FILE main.c)

ADD_EXECUTABLE(firmware ${MAIN_FILE})

ADD_DEPENDENCIES(firmware ${TB_LIBRARY})
TARGET_LINK_LIBRARIES(firmware ${TB_LIBRARY})

ADD_DEPENDENCIES(firmware ${LCD_LIBRARY})
TARGET_LINK_LIBRARIES(firmware ${LCD_LIBRARY})

ADD_DEPENDENCIES(firmware ${FRACTAL_LIBRARY})
TARGET_LINK_LIBRARIES(firmware ${FRACTAL_LIBRARY})

ADD_CUSTOM_COMMAND(TARGET firmware POST_BUILD COMMAND avr-objcopy ARGS -O ihex -R.eeprom firmware firmware.hex)
